# commit-boost-client

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prometheus  LICENSE  LICENSE-MIT  README.md  RELEASE.md  SECURITY.md  TERMS-OF-USE.md  build-linux.sh  cb-config.toml  config.dockerized.toml  config.example.toml  config.toml  docker-compose.yml  justfile  mux_keys.example.json  prometheus.yml  rust-toolchain.toml  rustfmt.toml  signer-module-api.yml  taplo.toml
.cargo/: audit.toml
.releases/: README.md  v0.9.7-rc1.yml  v2.0.4.yml  v2.0.5.yml  v2.0.6.yml  v2.0.7.yml  v2.1.0.yml  v2.1.1.yml  v2.1.2.yml  v2.1.3.yml  v2.1.4.yml
api/: signer-api.yml
benches/microbench/: Cargo.toml
benches/microbench/src/: get_header.rs
benches/pbs/: Cargo.toml  README.md  bench-config.toml  bench.docker-compose.yml
benches/pbs/src/: config.rs  main.rs
configs/: minimal.toml  pbs-mux.toml
crates/cli/: Cargo.toml
crates/cli/src/: docker_cmd.rs  docker_init.rs  docker_start.rs  lib.rs  runner.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: config.rs  constants.rs  error.rs  lib.rs  loader.rs  logging.rs  module_names.rs  signature.rs  signer.rs  store.rs  types.rs  utils.rs
crates/common/src/abi/: LidoCSModuleNORegistry.json  LidoNORegistry.json
crates/common/src/commit/: client.rs  constants.rs  error.rs  mod.rs  request.rs  response.rs
crates/common/src/config/: constants.rs  jwt.rs  log.rs  metrics.rs  mod.rs  module.rs  mux.rs  pbs.rs  signer.rs  utils.rs
crates/common/src/interop/: mod.rs
crates/common/src/interop/lido/: types.rs  utils.rs
crates/common/src/interop/ssv/: types.rs  utils.rs
crates/common/src/pbs/: builder.rs  config.rs  constants.rs  error.rs  event.rs  mod.rs  relay.rs  types.rs
crates/common/src/pbs/types/: beacon_block.rs  blinded_block_body.rs  blobs_bundle.rs  execution_payload.rs  execution_requests.rs  get_header.rs  kzg.rs  mod.rs  spec.rs  utils.rs
crates/common/src/pbs/types/testdata/: a.json  execution-payload-electra.json  execution-payload-electra.ssz  get-header-response.json  get-header-response.ssz  signed-blinded-beacon-block-deneb.json  signed-blinded-beacon-block-electra-2.json  signed-blinded-beacon-block-electra-2.ssz  signed-blinded-beacon-block-electra.json
crates/common/src/signer/: constants.rs  loader.rs  mod.rs  signer.rs  signers.rs  store.rs  types.rs  types2.rs
crates/common/src/signer/schemes/: bls.rs  ecdsa.rs  mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs  manager.rs  service.rs  signature.rs  types.rs  utils.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/metering/: Cargo.toml
crates/metering/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: docker_metrics_collector.rs  lib.rs  provider.rs  sdk.rs  sdk_2.rs
crates/pbs/: Cargo.toml
crates/pbs/src/: api.rs  boost.rs  constants.rs  error.rs  lib.rs  metrics.rs  service.rs  state.rs  utils.rs
crates/pbs/src/mev_boost/: get_header.rs  mod.rs  register_validator.rs  reload.rs  status.rs  submit_block.rs
crates/pbs/src/routes/: get_header.rs  mod.rs  register_validator.rs  reload.rs  router.rs  status.rs  submit_block.rs
crates/pbs/src/routes/get_header/: mod.rs  relay.rs  validation.rs
crates/pbs/src/routes/submit_block/: mod.rs  relay.rs  validation.rs
crates/pbs/src/types/: beacon_block.rs  blinded_block_body.rs  execution_payload.rs  get_header.rs  kzg.rs  mod.rs  spec.rs  utils.rs
crates/signer/: Cargo.toml  README.md  build.rs
crates/signer/proto/dirk/: eth2.proto  lister.proto  responsestate.proto  signer.proto
crates/signer/src/: constants.rs  dirk.rs  error.rs  lib.rs  manager.rs  metrics.rs  service.rs  utils.rs
crates/signer/src/hasher/: keccak.rs  mod.rs
crates/signer/src/manager/: dirk.rs  dirk2.rs  local.rs  mod.rs
crates/signer/src/proto/: google.api.rs  mod.rs  v1.rs
crates/signer/src/proto/dirk/: accountmanager.proto  dkg.proto  endpoint.proto  walletmanager.proto
docker/: logger.Dockerfile  (+4 more)
examples/builder_log/: Cargo.toml  Dockerfile
examples/builder_log/src/: main.rs
examples/constraints_api/: Cargo.toml  Dockerfile
examples/constraints_api/src/: constraints.rs  error.rs  main.rs  proofs.rs  types.rs
examples/da_commit/: Cargo.toml  Dockerfile
examples/da_commit/src/: main.rs
examples/status_api/: Cargo.toml  Dockerfile
examples/status_api/src/: main.rs
tests/: Cargo.toml
tests/data/: helder_spec.yml  holesky_spec.json  holesky_spec_data.json  hoodi_spec.json  keys.example.json  kurtosis_spec.json  mainnet_spec_data.json  module-jwt.txt  registration_holesky.json  sepolia_spec_data.json  signed_blinded_block_holesky.json  ssv_valid.json  ssv_valid_node.json  submit_block_response_holesky.json
tests/data/configs/: jwt.happy.toml  pbs.happy.toml  signer.happy.toml
tests/data/deneb/: holesky_spec.json  registration_holesky.json  sepolia_spec_data.json
tests/data/electra/: signed_blinded_block_holesky.json
tests/data/get_header/: bellatrix.json  capella.json  deneb.json  electra.json  fulu.json
tests/data/keystores/: pubkeys.json
tests/data/keystores/keys/0xb3a22e4a673ac7a153ab5b3c17a4dbef55f7e47210b20c0cbb0e66df5b36bb49ef808577610b034172e955d2312a61b9/: voting-keystore.json
tests/data/keystores/nimbus-keys/0x883827193f7627cd04e621e1e8d56498362a52b2a30c9a1c72036eb935c4278dee23d38a24d2f7dda62689886f0c39f4/: keystore.json
tests/data/keystores/prysm/: keymanageropts.json
tests/data/keystores/prysm/direct/accounts/: all-accounts.keystore.json
tests/src/: lib.rs  main.rs  mock_relay.rs  mock_ssv.rs  mock_ssv_node.rs  mock_ssv_public.rs  mock_validator.rs  signer_service.rs  utils.rs
tests/tests/: commits.rs  config.rs  payloads.rs  pbs_cfg_file_update.rs  pbs_get_header.rs  pbs_get_status.rs  pbs_integration.rs  pbs_mux.rs  pbs_mux_refresh.rs  pbs_post_blinded_blocks.rs  pbs_post_validators.rs  signer_jwt_auth.rs  signer_jwt_auth_cleanup.rs  signer_request_sig.rs  signer_tls.rs  web3-signer-client-auth.rs
tests/tests/common/: mod.rs
(+118 files in other folders)
