[workspace]
members = ["benches/*", "bin", "crates/*", "examples/builder_log", "examples/da_commit", "examples/status_api", "tests"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
version = "0.8.0"

[workspace.dependencies]
aes = "0.8"
alloy = { features = [
    "full",
    "getrandom",
    "providers",
    "rpc-types-beacon",
    "serde",
    "signer-local",
    "ssz",
], version = "0.12" }
async-trait = "0.1.80"
axum = { features = ["macros"], version = "0.8.1" }
axum-extra = { features = ["typed-header"], version = "0.10.0" }
axum-server = { features = ["tls-rustls"], version = "0.7.2" }
base64 = "0.22.1"
bimap = { features = ["serde"], version = "0.6.3" }
blsful = "2.5"
blst = "0.3.11"
bytes = "1.10.1"
cb-cli = { path = "crates/cli" }
cb-common = { path = "crates/common" }
cb-metrics = { path = "crates/metrics" }
cb-pbs = { path = "crates/pbs" }
cb-signer = { path = "crates/signer" }
cipher = "0.4"
clap = { features = ["derive", "env"], version = "4.5.4" }
color-eyre = "0.6.3"
ctr = "0.9.2"
derive_more = { features = ["deref", "display", "from", "into"], version = "2.0.1" }
docker-compose-types = "0.16.0"
docker-image = "0.2.1"
eth2_keystore = { git = "https://github.com/sigp/lighthouse", tag = "v7.0.1" }
ethereum_serde_utils = "0.7.0"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
eyre = "0.6.12"
futures = "0.3.30"
headers = "0.4.0"
indexmap = "2.2.6"
jsonwebtoken = { default-features = false, version = "9.3.1" }
lazy_static = "1.5.0"
parking_lot = "0.12.3"
pbkdf2 = "0.12.2"
prometheus = "0.13.4"
prost = "0.13.4"
rand = { features = ["os_rng"], version = "0.9" }
rayon = "1.10.0"
rcgen = "0.13.2"
reqwest = { features = ["json", "rustls-tls", "stream"], version = "0.12.4" }
rustls = "0.23.23"
serde = { features = ["derive"], version = "1.0.202" }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
sha2 = "0.10.8"
ssz_types = "0.10"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { features = ["full"], version = "1.37.0" }
toml = "0.8.13"
tonic = { features = ["channel", "prost", "tls"], version = "0.12.3" }
tonic-build = "0.12.3"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { features = ["env-filter", "json"], version = "0.3.18" }
tree_hash = "0.9"
tree_hash_derive = "0.9"
typenum = "1.17.0"
unicode-normalization = "0.1.24"
url = { features = ["serde"], version = "2.5.0" }
uuid = { features = ["fast-rng", "serde", "v4"], version = "1.8.0" }
