[workspace]
members = ["benches/*", "bin", "crates/*", "examples/da_commit", "examples/status_api", "tests"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.9.0"

[workspace.dependencies]
aes = "0.8"
alloy = { version = "^1.0.35", features = [
    "full",
    "getrandom",
    "providers",
    "rpc-types-beacon",
    "serde",
    "signer-local",
    "ssz",
] }
alloy-primitives = "^1.3.1"
async-trait = "0.1.80"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
bimap = { version = "0.6.3", features = ["serde"] }
blsful = "^2.5"
blst = "^0.3.15"
bytes = "1.10.1"
cb-cli = { path = "crates/cli" }
cb-common = { path = "crates/common" }
cb-metrics = { path = "crates/metrics" }
cb-pbs = { path = "crates/pbs" }
cb-signer = { path = "crates/signer" }
cipher = "0.4"
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
ctr = "0.9.2"
derive_more = { version = "2.0.1", features = ["deref", "display", "from", "into"] }
docker-compose-types = "0.16.0"
docker-image = "0.2.1"
ethereum_serde_utils = "0.7.0"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
eyre = "0.6.12"
futures = "0.3.30"
headers = "0.4.0"
indexmap = "2.2.6"
jsonwebtoken = { version = "9.3.1", default-features = false }
lazy_static = "1.5.0"
lh_eth2 = { package = "eth2", git = "https://github.com/sigp/lighthouse", tag = "v8.0.0-rc.0" }
lh_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", tag = "v8.0.0-rc.0" }
lh_types = { package = "types", git = "https://github.com/sigp/lighthouse", tag = "v8.0.0-rc.0" }
parking_lot = "0.12.3"
pbkdf2 = "0.12.2"
prometheus = "0.14.0"
prost = "0.13.4"
rand = { version = "0.9", features = ["os_rng"] }
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
sha2 = "0.10.8"
ssz_types = "0.11"
subtle = "2.5"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tonic = { version = "0.12.3", features = ["channel", "prost", "tls"] }
tonic-build = "0.12.3"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
tree_hash = "^0.10"
tree_hash_derive = "0.9"
typenum = "1.17.0"
unicode-normalization = "0.1.24"
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["fast-rng", "serde", "v4"] }

[patch.crates-io]
blstrs_plus = { git = "https://github.com/Commit-Boost/blstrs" }
