[package]
name = "cb-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cb-common.workspace = true
cb-pbs.workspace = true

tokio.workspace = true

axum.workspace = true

alloy.workspace = true

serde_json.workspace = true

reqwest.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tree_hash.workspace = true
eyre.workspace = true

ethereum_ssz.workspace = true
url.workspace = true
