[package]
edition.workspace = true
name = "cb-tests"
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
axum.workspace = true
cb-common.workspace = true
cb-pbs.workspace = true
cb-signer.workspace = true
eyre.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
url.workspace = true
