[package]
edition.workspace = true
name = "cb-bench-micro"
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
axum.workspace = true
cb-common.workspace = true
cb-pbs.workspace = true
cb-tests = { path = "../../tests" }
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "get_header"
harness = false
path = "src/get_header.rs"
