[package]
edition.workspace = true
name = "cb-bench-pbs"
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
cb-common.workspace = true
cb-tests = { path = "../../tests" }
comfy-table = "7.1.1"
histogram = "0.11.0"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
