[package]
name = "cb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cb-common.workspace = true
cb-pbs.workspace = true
cb-crypto.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true

tokio.workspace = true

serde_json.workspace = true

tracing.workspace = true
clap.workspace = true

eyre.workspace = true

tree_hash.workspace = true
tree_hash_derive.workspace = true

bollard = "0.16.1"