[package]
edition.workspace = true
name = "cb-cli"
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
cb-common.workspace = true
clap.workspace = true
docker-compose-types.workspace = true
eyre.workspace = true
indexmap.workspace = true
serde_yaml.workspace = true
