[package]
name = "cb-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# ethereum
alloy = { workspace = true }
ssz_types.workspace = true
ethereum_serde_utils.workspace = true

# networking
axum.workspace = true
reqwest.workspace = true

# async / threads
tokio.workspace = true

# serialization
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# telemetry
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# crypto
blst.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
eth2_keystore.workspace = true
k256.workspace = true
aes.workspace = true
ctr.workspace = true
cipher.workspace = true
pbkdf2.workspace = true
sha2.workspace = true

# misc
thiserror.workspace = true
eyre.workspace = true
url.workspace = true
rand.workspace = true
bimap.workspace = true
derive_more.workspace = true

unicode-normalization.workspace = true
base64.workspace = true
