[package]
edition.workspace = true
name = "cb-common"
publish = false
rust-version.workspace = true
version.workspace = true

[features]
testing-flags = []

[dependencies]
aes.workspace = true
alloy.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bimap.workspace = true
bytes.workspace = true
cipher.workspace = true
ctr.workspace = true
derive_more.workspace = true
docker-image.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
eyre.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
lh_eth2.workspace = true
lh_eth2_keystore.workspace = true
lh_types.workspace = true
pbkdf2.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
unicode-normalization.workspace = true
url.workspace = true
