[package]
name = "cb-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cb-common.workspace = true

alloy-rpc-types-beacon.workspace = true

serde.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true

# crypto
blst.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

thiserror.workspace = true
rand.workspace = true
tokio.workspace = true
eyre.workspace = true

tracing.workspace = true
