[package]
name = "metering"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]

sysinfo = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }