[package]
name = "metering"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.50"
bollard = "0.11"
futures-util = "0.3"
opentelemetry = { version = "0.18", features = ["metrics"] }
opentelemetry-prometheus = "0.10"
prometheus = "0.13"
sysinfo = "0.24"
tokio = { version = "1", features = ["full"] }
warp = "0.3"