[package]
name = "cb-metrics"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cb-common.workspace = true

# async / threads
tokio.workspace = true

# networking
axum.workspace = true

# telemetry
tracing.workspace = true
prometheus.workspace = true

# misc
thiserror.workspace = true
eyre.workspace = true
