[package]
edition.workspace = true
name = "cb-metrics"
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
cb-common.workspace = true
eyre.workspace = true
prometheus.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
