[package]
name = "cb-pbs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cb-common.workspace = true
cb-metrics.workspace = true

# ethereum
alloy.workspace = true
ethereum_ssz.workspace = true

# networking
axum.workspace = true
reqwest.workspace = true

# async / threads
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

# serialization
serde_json.workspace = true

# telemetry
tracing.workspace = true
prometheus.workspace = true

# crypto
blst.workspace = true
tree_hash.workspace = true

# misc
thiserror.workspace = true
eyre.workspace = true
url.workspace = true
uuid.workspace = true
lazy_static.workspace = true
