[package]
edition.workspace = true
name = "cb-pbs"
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
cb-common.workspace = true
cb-metrics.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
notify.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tree_hash.workspace = true
url.workspace = true
uuid.workspace = true
