[package]
name = "cb-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cb-common.workspace = true
cb-metrics.workspace = true

# ethereum
alloy.workspace = true

# networking
axum.workspace = true
axum-extra.workspace = true
headers.workspace = true
tonic.workspace = true
prost.workspace = true

# async / threads
tokio.workspace = true

# telemetry
tracing.workspace = true
prometheus.workspace = true

# crypto
blsful.workspace = true
tree_hash.workspace = true

# misc
thiserror.workspace = true
eyre.workspace = true
uuid.workspace = true
bimap.workspace = true
lazy_static.workspace = true
rand.workspace = true

[build-dependencies]
tonic-build.workspace = true
