[package]
edition.workspace = true
name = "cb-signer"
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
bimap.workspace = true
blsful.workspace = true
cb-common.workspace = true
cb-metrics.workspace = true
eyre.workspace = true
futures.workspace = true
headers.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
prost.workspace = true
rand.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tree_hash.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
