[package]
name = "builder_log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
commit-boost = { path = "../../bin" }
cb-common = {path="../../crates/common"}

# networking
reqwest.workspace = true

# async / threads
tokio.workspace = true
async-trait.workspace = true

# serialization
serde.workspace = true

# telemetry
tracing.workspace = true

