[package]
name = "constraints_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
commit-boost = { path = "../../bin" }
cb-common.workspace = true
cb-pbs.workspace = true

# networking
reqwest.workspace = true
axum.workspace = true

# async / threads
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true
tree_hash.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true

# telemetry
tracing.workspace = true
prometheus.workspace = true

# misc
eyre.workspace = true
color-eyre.workspace = true
lazy_static.workspace = true

# types
alloy.workspace = true
alloy-consensus = "0.2.0"
alloy-eips = "0.2.0"
