[package]
name = "da_commit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
commit-boost = { path = "../../bin" }

# ethereum
alloy.workspace = true

# networking
reqwest.workspace = true

# async / threads
tokio.workspace = true

# serialization
serde.workspace = true

# telemetry
tracing.workspace = true
prometheus.workspace = true

# misc
eyre.workspace = true
lazy_static.workspace = true
