[package]
edition.workspace = true
name = "da_commit"
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
color-eyre.workspace = true
commit-boost = { path = "../../bin" }
eyre.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
