[package]
edition.workspace = true
name = "status_api"
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
color-eyre.workspace = true
commit-boost = { path = "../../bin" }
eyre.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
